Closed Bug 1730598 Opened 4 years ago Closed 4 years ago

Certain PDF pages do not display

Categories

(Core :: Graphics: Canvas2D, defect, P1)

Firefox 94
defect

Tracking

()

VERIFIED FIXED
94 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox92 --- unaffected
firefox93 --- unaffected
firefox94 + verified

People

(Reporter: liamre, Assigned: bobowen)

References

(Depends on 1 open bug, Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:91.0) Gecko/20100101 Firefox/91.0

Steps to reproduce:

(I'm actually on the latest Nightly with RFP)

  1. Visit https://dykstra.weebly.com/uploads/1/0/4/6/1046090/reading_poetry_article.pdf

Actual results:

The PDF pages do not display

Expected results:

The PDF pages are visible

Has Regression Range: --- → irrelevant
Has STR: --- → yes
Component: Untriaged → PDF Viewer
OS: Unspecified → All
Regressed by: 1709603
Hardware: Unspecified → Desktop
OS: All → Unspecified
Hardware: Desktop → Unspecified

Are you sure the cause of this bug was bug 1709603?

Flags: needinfo?(liamrengland)

(In reply to Marco Castelluccio [:marco] from comment #1)

Are you sure the cause of this bug was bug 1709603?

Verified with mozregression, yes.

2021-09-13T18:31:39.962000: INFO : Narrowed integration regression window from [d9383eed, d3df3237] (3 builds) to [3d7e89c7, d3df3237] (2 builds) (~1 steps left)
...
2021-09-13T18:31:40.733000: DEBUG : Found commit message:
Bug 1709603: Use a separate permanent canvas back buffer when texture has synchronization. r=lsalzman

Differential Revision: https://phabricator.services.mozilla.com/D125201

2021-09-13T18:31:40.733000: DEBUG : Did not find a branch, checking all integration branches
2021-09-13T18:31:40.735000: INFO : The bisection is done.
2021-09-13T18:31:40.736000: INFO : Stopped

Is there any more info I can provide?

Flags: needinfo?(liamrengland)
Has Regression Range: irrelevant → yes

Bob, rings a bell?

Flags: needinfo?(bobowencode)

(In reply to Sylvestre Ledru [:Sylvestre] from comment #3)

Bob, rings a bell?

Well, it's my patch.
Perhaps I'm missing some calls from the lock/unlock.

Assignee: nobody → bobowencode
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Flags: needinfo?(bobowencode)
See Also: → 1730564

Changing severity to S2, because at least some PDF documents are completely unreadable.

Severity: -- → S2
Priority: -- → P1

This is required to make sure dependents are updated.

The issue here is in Canvas2D.

Component: PDF Viewer → Canvas: 2D
Product: Firefox → Core
Depends on: 1730718
Pushed by bobowencode@gmail.com: https://hg.mozilla.org/integration/autoland/rev/5faf20f85894 Flush and DetachAllSnapshots in TextureClient::EndDraw. r=lsalzman
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 94 Branch

Reproduced the issue using an affected Nightly build from 2021-09-13 on Win 10x64.

This issue is verified as fixed on latest Beta 94.0b3 and latest Nightly , Win 10x64.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: