Bug 1730598: Flush and DetachAllSnapshots in TextureClient::EndDraw. r=lsalzman

This is required to make sure dependents are updated.

Differential Revision: https://phabricator.services.mozilla.com/D125529